It is hard to tell on my screen but I think I see a couple blue points. Probably add color property for each point next.

--- a/Canvas.html
+++ b/Canvas.html
@@ -5,10 +5,14 @@
 <body>
 	<canvas id="ViewPort" width="500" height="400"></canvas>
 	<h3>Math Palette</h3>
+	<script type="text/javascript" src="Point.js"></script>
+	<script type="text/javascript" src="PointSample.js"></script>
 	<script type="text/javascript">
 		var context = document.getElementById("ViewPort").getContext("2d");
 		context.fillStyle = "#00008B";
-		context.fillRect(0,0,1,1);
+		for (var i = 0; i < Points.length; i++) {
+			context.fillRect(Points[i].X,Points[i].Y,1,1);
+		}
 	</script>
 </body>
 </html>
