--- a/Canvas.html
+++ b/Canvas.html
@@ -9,8 +9,8 @@
 	<script type="text/javascript" src="PointSample.js"></script>
 	<script type="text/javascript">
 		var context = document.getElementById("ViewPort").getContext("2d");
-		context.fillStyle = "#00008B";
 		for (var i = 0; i < Points.length; i++) {
+			context.fillStyle = Points[i].Color;
 			context.fillRect(Points[i].X,Points[i].Y,1,1);
 		}
 	</script>
