--- a/Canvas.html
+++ b/Canvas.html
@@ -18,6 +18,8 @@
 	<script type="text/javascript" src="MatrixSample.js"></script>
 	<script type="text/javascript" src="Line.js"></script>
 	<script type="text/javascript" src="LineSample.js"></script>
+	<script type="text/javascript" src="Polygon.js"></script>
+	<script type="text/javascript" src="PolygonSample.js"></script>
 	<script type="text/javascript">
 		var context = document.getElementById("ViewPort").getContext("2d");
 		for (var i = 0; i < Elements.length; i++) {
